tests/baselines/reference/arrayLiteralAndArrayConstructorEquivalence1.errors.txt
==== tests/cases/compiler/arrayLiteralAndArrayConstructorEquivalence1.ts (1 errors) ====
    var myCars=new Array(); 
    var myCars3 = new Array({});
    var myCars4: Array; // error
                 ~~~~~
!!! arrayLiteralAndArrayConstructorEquivalence1.ts(3,14): error TS2173: Generic type references must include all type arguments.
    var myCars5: Array<any>[];
     
    myCars = myCars3;
    myCars = myCars4;
    myCars = myCars5;
     
    myCars3 = myCars;
    myCars3 = myCars4;
    myCars3 = myCars5;   
    